--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -1,9 +1,11 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="skewed-overlay"></div>
+	{% if not hide_background %}
+		<div class="skewed-overlay"></div>
+	{% endif %}
 	<div class="page-header">
-		{% if ( tag_image ) %}
+		{% if ( tag_image and not hide_background ) %}
 			<div class="page-header-background">
 				<img src="{{ tag_image }}" class="page-header-image">
 			</div>
