Make improvements on the languages nav
- Show it when the hover instead of click
- Remove toggle class
- Improve style. Remove unnecsary styles
- Modify markup

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -92,12 +92,19 @@ $navbar-default-height: 60px;
 }
 
 #nav-main-desktop {
+  & ~ .nav-languages {
+    display: none;
+  }
+
   @include large-and-up {
     flex-grow: 1;
     width: auto;
   }
 }
 
+// & ~ .nav-languages {
+//   background-color: yellow;
+//   display: none;
 #header > .nav-languages {
   display: none;
 
