--- a/assets/src/scss/layout/navbar/languages.scss
+++ b/assets/src/scss/layout/navbar/languages.scss
@@ -5,29 +5,22 @@
   display: none;
   font-size: $font-size-sm;
   font-weight: 700;
-  padding: 0 20px;
+  padding: 0 25px;
 
   @include large-and-up {
     border-inline-start: var(--top-navigation--separation, 1px solid transparentize($white, 0.5));
     display: inline-block;
     line-height: $menu-height;
-  }
 
-  &::after {
-    background-color: var(--top-navigation--color, $white);
-    background-repeat: no-repeat;
-    content: "";
-    display: inline-block;
-    height: 8px;
-    margin-inline-start: 4px;
-    mask: url("../../images/chevron.svg") 0 0/8px 8px;
-    transform: rotate(90deg);
-    transition: transform 100ms linear;
-    width: 8px;
-  }
+    .nav-languages {
+      display: none;
+    }
 
-  &[aria-expanded="true"]::after {
-    transform: rotate(-90deg);
+    &:hover {
+      .nav-languages {
+        display: block;
+      }
+    }
   }
 }
 
@@ -35,6 +28,8 @@
   box-shadow: none;
   position: unset;
   width: 100%;
+  padding-top: 8px;
+  padding-inline: 8px;
 
   a.nav-link {
     padding: 0;
@@ -45,10 +40,8 @@
     display: inline-block;
     flex-grow: 1;
     margin-block: 0;
-    margin-inline: 40px;
     padding-bottom: 36px;
     padding-top: 40px;
-    padding-inline: 0;
     width: 100%;
   }
 
@@ -78,26 +71,21 @@
   }
 
   @include large-and-up {
-    background: var(--top-navigation--background, $white);
-    border-radius: 4px;
-    box-shadow: 0 1px 4px transparentize($black, 0.88);
-    inset-inline-end: 8px;
+    inset-inline-end: 0;
     min-width: 140px;
     position: absolute;
     text-align: start;
-    top: $menu-height + 8px;
     width: unset;
     z-index: 3;
-
-    &.open {
-      display: block;
-    }
 
     ul {
       border: 0;
       list-style: none;
       margin: 0;
       padding: 16px 0;
+      background: var(--top-navigation--background, $white);
+      border-radius: 4px;
+      box-shadow: 0 1px 4px transparentize($black, 0.88);
     }
 
     li {
@@ -112,6 +100,10 @@
 
     li:hover {
       background: rgba(216, 216, 216, 0.4);
+
+      a.nav-link:before {
+        border-bottom: none !important;
+      }
     }
 
     li > span[aria-hidden="true"] {
@@ -133,7 +125,6 @@
     .current-language a::after {
       background-color: $grey-80;
       content: "";
-      display: inline-block;
       float: right;
       height: 48px;
       mask: url("../../images/checkmark.svg") 50% 50%/16px 12px no-repeat;
