New languages nav template
- Separate its logic to template

--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -25,20 +25,7 @@
 					data-bs-toggle="open"
 					data-bs-target="#nav-languages"
 			>{{ current_lang.code|capitalize }}</button>
-			<nav
-					id="nav-languages"
-					class="nav-languages"
-					aria-label="{{ __( 'Languages of the site', 'planet4-master-theme' ) }}"
-			>
-				<ul>
-					{% for key,item in site_languages %}
-						<li class="nav-item {{ item.active ? "current-language" : "" }}">
-							<a class="nav-link" href="{{ item.url }}">{{ item.native_name }}</a>
-							<span aria-hidden="true">&nbsp;|&nbsp;</span>
-						</li>
-					{% endfor %}
-				</ul>
-			</nav>
+			{% include 'languages-nav.twig' %}
 		{% endif %}
 	</div>
 
