--- a/templates/desktop-menu.twig
+++ b/templates/desktop-menu.twig
@@ -66,15 +66,6 @@
 				data-bs-toggle="open"
 				data-bs-target="#nav-languages"
 		>{{ current_lang.code|capitalize }}</button>
-		<nav id="nav-languages" class="nav-languages">
-			<ul>
-				{% for key,item in site_languages %}
-					<li class="nav-item {{ item.active ? 'current-language' : '' }}">
-						<a class="nav-link" href="{{ item.url }}">{{ item.native_name }}</a>
-						<span aria-hidden="true">&nbsp;|&nbsp;</span>
-					</li>
-				{% endfor %}
-			</ul>
-		</nav>
+		{% include 'languages-nav.twig' %}
 	{% endif %}
 </div>
