--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -15,10 +15,10 @@
 		<a class="site-logo" href="{{ data_nav_bar.home_url }}">
 			{% include "blocks/site_logo.twig" %}
 		</a>
-		{% include 'language-switcher.twig' %}
 
 		{% if site_languages is not empty %}
-			{% include 'languages-nav.twig' %}
+			{# {% set current_lang = site_languages|filter(i => i.active)|first %} #}
+			{% include 'language-switcher.twig' %}
 		{% endif %}
 	</div>
 
