Restore search bar position
* By adding a second language switcher, and adjusting CSS slightly to
account for new position on desktop. On mobile the new switcher is
hidden.
* Seems to need no other changes as on mobile it's a fixed element.

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -95,14 +95,14 @@ $navbar-default-height: 60px;
   @include large-and-up {
     flex-grow: 1;
     width: auto;
+  }
+}
 
-    .nav-languages {
-      display: none;
+#header > .nav-languages {
+  display: none;
 
-      &.open {
-        display: flex;
-      }
-    }
+  &.open {
+    display: flex;
   }
 }
 
