--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -40,6 +40,7 @@
 		</button>
 	</div>
 	{% include 'search-form.twig' %}
+	{% include 'language-switcher.twig' %}
 	{% if mobile_tabs_menu %}
 	<div id="nav-mobile">
 		<nav id="nav-mobile-menu">
