--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -42,7 +42,21 @@
 	</div>
 
 	{% include 'search-form.twig' %}
-	{% include 'language-switcher.twig' %}
+
+	{% if site_languages is not empty %}
+	{% set current_lang = site_languages|filter(i => i.active)|first %}
+		<button
+			class="nav-languages-toggle"
+			type="button"
+			aria-label="{{ __( 'Choose language', 'planet4-master-theme' ) }}"
+			aria-expanded="false"
+			data-bs-toggle="open"
+			data-bs-target="#nav-languages"
+		>{{ current_lang.code|capitalize }}
+			{% include 'language-switcher.twig' %}
+		</button>
+	{% endif %}
+
 	{% if mobile_tabs_menu %}
 	<div id="nav-mobile">
 		<nav id="nav-mobile-menu">
