Add Rounded style to Image block
This is actually a default WP styles that we had manually removed, but it also needs some small CSS tweaks to fit our designs

--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -5,6 +5,13 @@
   margin-top: $sp-1;
   margin-bottom: $sp-2;
 
+  &.is-style-rounded {
+    figure,
+    img {
+      border-radius: 50%;
+    }
+  }
+
   &:not(.force-no-lightbox) img {
     cursor: pointer;
   }
