--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -19,6 +19,7 @@
 @import "blocks/core-overrides/Table";
 @import "blocks/core-overrides/media-text";
 @import "blocks/core-overrides/columns";
+@import "blocks/core-overrides/Heading";
 
 // Other
 @import "blocks/WideBlocks";
