--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -14,6 +14,7 @@
 @import "blocks/ENForm/ENFormEditorStyle";
 @import "blocks/TakeActionBoxout/edit";
 @import "blocks/CookiesEditor";
+@import "blocks/core-overrides/HeadingEditor";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
