Revert "PLANET-6672: Languages menu: New drop/down menu behavior"

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -98,6 +98,14 @@ $navbar-default-height: 60px;
   }
 }
 
+#header > .nav-languages {
+  display: none;
+
+  &.open {
+    display: flex;
+  }
+}
+
 .nav-menu {
   background: var(--top-navigation--background, $dark-blue);
   height: 100%;
