--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -18,6 +18,7 @@
 @import "blocks/core-overrides/Separator";
 @import "blocks/core-overrides/Table";
 @import "blocks/core-overrides/media-text";
+@import "blocks/core-overrides/columns";
 
 // Other
 @import "blocks/WideBlocks";
