--- a/assets/src/scss/partials/navigation-bar-light.scss
+++ b/assets/src/scss/partials/navigation-bar-light.scss
@@ -23,3 +23,11 @@
   --nav-link--active--color: #{$black};
   --nav-link--opacity: 1;
 }
+
+.nav-languages-toggle {
+  @include large-and-up {
+    &::after {
+      background-color: $grey-80;
+    }
+  }
+}
