PLANET-6712 Add transparent style to core Button block
This is needed for some block patterns. In the editor preview we add a background, otherwise we cannot see the style since it is white on white

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -296,7 +296,8 @@ button.load-more-mt {
   transition-duration: 100ms;
 }
 
-.wp-block-button.transparent-button a {
+.wp-block-button.transparent-button a,
+.wp-block-button.is-style-transparent a {
   --transparent-button-- {
     border-color: $white;
     color: $white;
