PLANET-6700: Fix broken arrows for Gallery and Cover blocks
Ref: https://jira.greenpeace.org/browse/PLANET-6700
Ref: https://jira.greenpeace.org/browse/PLANET-6719

Gallery carousel and Take action cover carousel are inheriting their style from tHe Carousel header
Its icons declaration are interfering between blocks
The conflict only shows when related css files are all included,
which happens in the editor, on preview, and when these blocks are all on the same page

Adding more specific selectors to fix the arrows issue.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -545,7 +545,7 @@ $medium-image-height: 600px;
   }
 }
 
-.carousel-control-prev-icon {
+.carousel-header .carousel-control-prev-icon {
   text-align: center;
   width: 28px;
   height: 46px;
@@ -590,7 +590,7 @@ $medium-image-height: 600px;
   }
 }
 
-.carousel-control-next-icon {
+.carousel-header .carousel-control-next-icon {
   text-align: center;
   width: 28px;
   height: 46px;
