PLANET-6767: Remove control panel overlay
Ref: https://jira.greenpeace.org/browse/PLANET-6767

WP 5.9 background image is displayed over our links because of the .welcome-panel class used
It prevents any click on those links
Removing this class fixes the issue

--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -1,5 +1,14 @@
+.cp-item {
+  font-size:  14px;
+  padding:  5px 0;
+}
+
 .cp-item div {
   background-color: rgb(250, 250, 250);
+}
+
+#dashboard-widgets .cp-item h3 {
+  font-weight: bold;
 }
 
 .cp-subitem-response {
