Add Grey 5% to our color palette
This is needed for some block patterns, for their background color

--- a/assets/src/scss/base/_palette.scss
+++ b/assets/src/scss/base/_palette.scss
@@ -1,10 +1,11 @@
-// Allower colors for blocks palette
+// Allow colors for blocks palette
 $palette: (
   "grey-80": $grey-80,
   "grey-60": $grey-60,
   "grey-40": $grey-40,
   "grey-20": $grey-20,
   "grey-10": $grey-10,
+  "grey-05": $grey-05,
   "grey": $grey,
   "gp-green": $gp-green,
   "x-dark-blue": $x-dark-blue,
