Force rounded images to have an aspect ratio of 1
Otherwise they look oval instead of rounded like we want, because we set the img elements' height to auto

--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -10,6 +10,11 @@
     img {
       border-radius: 50%;
     }
+
+    img {
+      object-fit: cover;
+      aspect-ratio: 1;
+    }
   }
 
   &:not(.force-no-lightbox) img {
