PLANET-6787 Add white to our theme color palette
This is because we removed the WP default color palette, but white might be useful to editors so we need to add it to our colors.

--- a/assets/src/scss/base/_palette.scss
+++ b/assets/src/scss/base/_palette.scss
@@ -13,6 +13,7 @@ $palette: (
   "blue": $blue,
   "orange-hover": $orange-hover,
   "yellow": $yellow,
+  "white": $white,
 );
 
 @each $name, $color in $palette {
