Add new max-width to text and intro text
- Apply to tag pages on XXL screens.

--- a/assets/src/scss/layout/_page-header.scss
+++ b/assets/src/scss/layout/_page-header.scss
@@ -62,6 +62,10 @@
     @include x-large-and-up {
       max-width: 736px;
     }
+
+    @include xx-large-and-up {
+      max-width: 856px;
+    }
   }
 
   h3 _-- {
