Create CSS class to force hiding Image block caption and credits
This will be particularly useful for block patterns, where we never want to show caption nor credits

--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -21,6 +21,10 @@
     cursor: pointer;
   }
 
+  &.force-no-caption figcaption {
+    display: none;
+  }
+
   @include large-and-up {
     margin-top: $sp-2;
     margin-bottom: $sp-4;
