--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -249,3 +249,15 @@ $nested-comment-left-margin: 50px;
     background: rgba(0, 0, 0, 0.2);
   }
 }
+
+@mixin links-hover-effect {
+  color: #007D49;
+  text-decoration-color: #BEE7D1;
+  box-shadow: inset 0 -2px #BEE7D1;
+  transition: 200ms cubic-bezier(0.5, 0, 0, 1);
+
+  &:hover {
+    box-shadow: inset 0 -1.1em #E4F5ED;
+    text-decoration-color: #E4F5ED;
+  }
+}
