PLANET-6887 Fix placeholder color for Button block
Without this fix, the placeholder is white regardless of the actual text color

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -74,6 +74,10 @@
   transition-duration: 150ms;
   transition-timing-function: linear;
   font-size: $font-size-sm;
+
+  [data-rich-text-placeholder]::after {
+    color: inherit;
+  }
 }
 
 .wp-block-button .wp-block-button__link[role="textbox"],
