PLANET-6789 Add pointer-events none to animated form field labels
Without this the label sometimes blocks clicking on the field to start typing

--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -201,6 +201,7 @@ textarea.form-control {
     position: relative;
 
     label {
+      pointer-events: none;
       position: absolute;
       left: 0;
       top: 16px;
