PLANET-6325 Add padding top to pages with no title
Without this fix the navbar overlaps the page content if there is no title

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -13,7 +13,7 @@ $min-height: 40px;
     height: auto;
   }
 
-  .page-header-hidden + &.no-page-title {
+  &.no-page-title {
     padding-top: $menu-height-small;
 
     @include medium-and-up {
