PLANET-6520: Implement Quick Links block pattern (#831)
* PLANET-6520 Implement Quick Links block pattern

It is very similar to the Deep Dive block pattern

* Remove min-width in Columns mobile carousel

This is to fix commitlint

* Expand screen sizes for mobile carousel

This is to avoid images being too narrow in bigger mobile screen sizes

* Reduce some lines' length

This is to comply with SonarCloud and our code guidelines

Co-authored-by: Dan Tovbein <dtovbein@gmail.com>
Co-authored-by: Maud Leray <maudleray035@gmail.com>

--- a/assets/src/styles/blocks/core-overrides/_columns.scss
+++ b/assets/src/styles/blocks/core-overrides/_columns.scss
@@ -1,5 +1,5 @@
-.is-style-mobile-carousel {
-  @include mobile-only {
+.wp-block-columns.is-not-stacked-on-mobile.is-style-mobile-carousel {
+  @include small-and-less {
     flex-wrap: nowrap;
     overflow-x: auto;
     scrollbar-width: none;
@@ -9,11 +9,8 @@
     }
 
     .wp-block-column {
-      min-width: 30vw;
-    }
-
-    &:not(.is-not-stacked-on-mobile) .wp-block-column:not(:last-child) {
-      margin-inline-end: $sp-2;
+      flex-basis: auto;
+      flex-shrink: 0;
     }
   }
 }
