--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -284,3 +284,24 @@
     text-align: center;
   }
 }
+
+.post-content .article-list-item {
+  .top-page-tags {
+    margin-bottom: $sp-1;
+  }
+
+  .article-list-item-headline {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: $sp-1;
+  }
+
+  .article-list-item-content {
+    margin-bottom: $sp-1;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
