Update carousel header styles (#900)
- Create new style to reset default margin set to blocks

Co-authored-by: Dan Tovbein <dtovbein@gmail.com>

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -78,6 +78,16 @@ $medium-image-height: 600px;
 .carousel-header {
   position: relative;
   width: 100vw;
+
+  &.is-style-fit-height-to-content {
+    &.block {
+      display: block;
+    }
+
+    &.block-header {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .carousel-inner {
