--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -39,6 +39,8 @@
 }
 
 .is-style-space-evenly {
+  gap: 24px !important;
+
   & > * {
     flex-grow: 1;
     flex-basis: 100%;
@@ -46,12 +48,11 @@
 
     @include medium-and-up {
       flex-grow: 0;
-      flex-basis: calc(50% - calc(var(--wp--style--block-gap, 2em) / 2));
+      flex-basis: calc(50% - 12px);
     }
 
     @include large-and-up {
-      flex-basis: 0;
-      flex-grow: 1;
+      flex-basis: calc(25% - 18px);
     }
   }
 }
