Experiment with dark mode feature
- The code is very dirty for now (POC)

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -53,5 +53,7 @@
 	{% if not new_design_country_selector %}
 		<script id="countries_script" type="application/json" async>{% include "countries.json" %}</script>
 	{% endif %}
+
+	{% include 'dark-mode-swicther.twig' %}
 </body>
 </html>
