Deprecate country selector feature flag
- Remove settings
- Remove references
- Remove styles
- Remove templates

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,5 +1,5 @@
 <footer id="footer" class="site-footer site-footer--{{ nav_type }}">
-	{% if new_design_country_selector and nav_type != 'minimal' %}
+	{% if nav_type != 'minimal' %}
 	<div id="country-selector" class="footer-country-selector">
 		{% include 'footer_country_selector.twig' %}
 	</div>
