PLANET-6851 Add share buttons to Gravity Forms confirmation settings
This way editors will be able to add sharing functionalities to their form's confirmation messages.

--- a/assets/src/scss/components/_share-buttons.scss
+++ b/assets/src/scss/components/_share-buttons.scss
@@ -61,4 +61,13 @@
       font-size: 1.5rem;
     }
   }
+
+  .native {
+    background: $orange;
+    display: none;
+
+    &:active {
+      background: darken($orange, 20%);
+    }
+  }
 }
