PLANET-6853 Add parallax effect to PageHeader (#931)
For this we use a JS library called Rellax. The effect was added as a style for the Media & Text block, some small CSS changes were needed to make it work properly.

--- a/assets/src/styles/blocks/PageHeader.scss
+++ b/assets/src/styles/blocks/PageHeader.scss
@@ -28,6 +28,12 @@ $text-column-padding-in: 24px;
     margin: -$sp-5x $sp-3 $sp-3;
     padding-inline-start: 0;
     padding-inline-end: 0;
+    z-index: 1;
+
+    .wp-block-button,
+    .wp-block-button a {
+      width: auto;
+    }
   }
 
   .wp-block-group:first-child {
