Fix Gravity Forms select inputs
Editors can change the position of the sub-label and we can't detect it via CSS, but it impacts the arrow's positioning. It's better then to use browser defaults than our custom arrow.

--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -132,6 +132,7 @@
 .form-control,
 .form-select,
 .ginput_container_select select,
+.name_prefix_select select,
 .gfield_time_ampm select,
 .ginput_address_country select,
 .gfield input:not([type="file"]),
