PLANET-6875: Quick links - start with 9 items (#934)
* PLANET-6875: Quick links - start with 9 items

Ref: https://jira.greenpeace.org/browse/PLANET-6875

Add 9 items to Quick Links pattern
Expand scroll behavior to < 1200 screen
Adapt gap to small screen
Update master-theme assets

--- a/assets/src/styles/blocks/core-overrides/_columns.scss
+++ b/assets/src/styles/blocks/core-overrides/_columns.scss
@@ -1,5 +1,5 @@
 .wp-block-columns.is-not-stacked-on-mobile.is-style-mobile-carousel {
-  @include small-and-less {
+  @include large-and-less {
     flex-wrap: nowrap;
     overflow-x: auto;
     scrollbar-width: none;
@@ -12,5 +12,9 @@
       flex-basis: auto;
       flex-shrink: 0;
     }
+  }
+
+  @include small-and-less {
+    gap: $sp-2;
   }
 }
