New layout to default and category listing pages
- Based on the Action listing page

--- a/assets/src/scss/pages/_listing-page.scss
+++ b/assets/src/scss/pages/_listing-page.scss
@@ -80,7 +80,7 @@
   }
 
   // Firefox
-  .wrapper-action-type:not(:-moz-only-whitespace) {
+  .wrapper-post-term:not(:-moz-only-whitespace) {
     display: flex;
 
     & ~ .wrapper-post-tag:not(:-moz-only-whitespace) {
